# InfiniteTalk

./: .gitignore  generate_infinitetalk.py  pyproject.toml  requirements.txt
infinitetalk/: __init__.py
infinitetalk/serving/: __init__.py  __main__.py
serving/: README.md  __init__.py  __main__.py  client_ulysses8_teacache_ultimate.sh  config.py  main.py  schema.py  server.sh  task_manager.py
serving/api/: __init__.py  deps.py  files.py  router.py  server.py  service_routes.py
serving/api/tasks/: __init__.py  common.py  image.py  video.py
serving/media/: __init__.py  audio.py  base.py  image.py
serving/services/: __init__.py  distributed_utils.py  file_service.py
serving/services/generation/: __init__.py  base.py  image.py  video.py
serving/services/inference/: __init__.py  infinitetalk_audio.py  service.py  worker.py
serving/utils/: generate_task_id.py  timing.py
src/: __init__.py
wan/: multitalk.py
wan/modules/: attention.py  multitalk_model.py
wan/utils/: multitalk_utils.py  timing.py
